modification style + commentaires index.js + ajout footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a class="nav-link" href="index.html">Accueil</a>
               </li>
               <li class="nav-item panier">
-                <a class="nav-link" href="pages/panier.html">
+                <a class="nav-link" href="panier.html">
                   <i class="fas fa-shopping-basket"></i> Panier<span>0</span>
                 </a>
               </li>
@@ -57,11 +57,47 @@
    <!--fin header -->
 
     <main>
-        <h1>Ensemble de produits présentés par Orinoco !</h1>
+        <h1>Ensemble des produits proposés par Orinoco !</h1>
         <div id="teddies_list"></div>
     </main>
-    </body> 
-    <script src="assets/js/index.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+
+   <!-- Footer -->
+  <footer class="page-footer font-small bg-light pt-4">
+      <div class="container-fluid text-center text-md-left">
+        <div class="row">
+          <div class="col-md-6 mt-md-0 mt-3">
+            <img src="assets/images/logo.png" width="150" height="60"alt="Logo Orinoco"/></a>
+          </div>
+        <hr class="clearfix w-100 d-md-none pb-3">
+        <div class="col-md-3 mb-md-0 mb-3">
+          <h5 class="text-uppercase">Suivez-nous</h5>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Twitter</a>
+            </li>
+            <li>
+              <a href="#!">Instagram</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-3 mb-md-0 mb-3">
+          <h5 class="text-uppercase">Contactez-nous</h5>
+          <ul class="list-unstyled">
+            <li>13 rue de la Concorde, 75000 Paris</li></li>
+            <li>05.68.69.69.69</li>
+            <li>contact@orinoco.com</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  <!-- Copyright -->
+    <div class="footer-copyright text-center py-3 blue">© 2020 Copyright:
+      <a href="https://mdbootstrap.com/"> Orinoco.com</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+<!-- Fin Footer -->
+  </body> 
+  <script src="assets/js/index.js"></script>
 </html>
 
