--- a/confirmation.html
+++ b/confirmation.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="icon" href="images/favicon.ico"/>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="icon" href="assets/images/favicon.ico"/>
     
     <title>Confirmation - Orinoco</title>
   </head>
@@ -23,7 +23,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div id="navbarContent" class="collapse navbar-collapse">
+            <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
               <ul class="navbar-nav">
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Accueil</a>
@@ -41,7 +41,7 @@
       </div>
     </header>
 
-    <!--MAIN SECTION - Liste des produits-->
+    <!-- Liste des produits-->
     <main class="container">
       <div class="row confirm-order my-4">
         <div class="card col-10 offset-1 col-md-8 offset-md-2">
@@ -60,7 +60,43 @@
         </div>
       </div>
     </main>
-  </body>
-  <script src="confirm.ation.js"></script>
-  <script src="bootstrap.min.js"></script>
+    
+    <!-- Footer -->
+    <footer class="page-footer font-small bg-light pt-4">
+        <div class="container-fluid text-center text-md-left">
+          <div class="row">
+            <div class="col-md-6 mt-md-0 mt-3">
+              <img src="assets/images/logo.png" width="150" height="60"alt="Logo Orinoco"/></a>
+            </div>
+          <hr class="clearfix w-100 d-md-none pb-3">
+          <div class="col-md-3 mb-md-0 mb-3">
+            <h5 class="text-uppercase">Suivez-nous</h5>
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!">Twitter</a>
+              </li>
+              <li>
+                <a href="#!">Instagram</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3 mb-md-0 mb-3">
+            <h5 class="text-uppercase">Contactez-nous</h5>
+            <ul class="list-unstyled">
+              <li>13 rue de la Concorde, 75000 Paris</li></li>
+              <li>05.68.69.69.69</li>
+              <li>contact@orinoco.com</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    <!-- Copyright -->
+      <div class="footer-copyright text-center py-3 blue">© 2020 Copyright:
+        <a href="https://mdbootstrap.com/"> Orinoco.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+<!-- Fin Footer -->
+  </body> 
+  <script src="assets/js/confirmation.js"></script>
 </html>
