--- a/panier.html
+++ b/panier.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="icon" href="images/favicon.ico"/>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="icon" href="assets/images/favicon.ico"/>
     
     <title>Panier - Orinoco</title>
   </head>
@@ -18,11 +18,11 @@
           <nav class="col navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="index.html">
               <img
-                src="images/logo.png"width="150"height="60" alt="Logo Orinoco"/></a>
+                src="assets/images/logo.png"width="150"height="60" alt="Logo Orinoco"/></a>
             <button class="navbar-toggler"type="button"data-toggle="collapse"data-target="#navbarContent"aria-controls="navbarSupportedContent"aria-expanded="false"aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div id="navbarContent" class="collapse navbar-collapse">
+            <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
               <ul class="navbar-nav">
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Accueil</a>
@@ -39,11 +39,12 @@
         </div>
       </div>
     </header>
-    <!--Main, liste du panier-->
+
+    <!--Contenu du panier-->
     <main class="container">
       <div class="row my-4 headlines"></div>
       <div class="row products-container border-dark"></div>
-      <div class="card border-dark form-container shadow my-3">
+      <div class="card border-dark form-container">
         <div class="card-header text-center">
           <h1>Pour valider votre commande</h3>
         </div>
@@ -64,7 +65,7 @@
               <div class="col-md-5">
                 <input type="email"class="form-control"id="inputEmail"placeholder="xxx@yyy.zzz"required/>
               </div>
-              <label for="telephoneNumber" class="col-md-1 col-form-label">Tel</label>
+              <label for="telephoneNumber" class="col-md-1 col-form-label">Téléphone</label>
               <div class="col-md-5">
                 <input type="tel" maxlength="10" class="form-control"id="telephoneNumber"placeholder="0000000000"required/>
               </div>
@@ -84,16 +85,53 @@
               </div>
             </div>
             <div class="text-center">
-              <button class="btn btn-danger order-submit">
-                Envoyer mes informations
+              <button class="btn btn-info order-submit">
+                Confirmer mes informations
               </button>
             </div>
           </form>
         </div>
       </div>
-      <a href="confirm.html" class="btn btn-primary col-6 offset-3 col-md-4 offset-md-4 my-4 disabled">Valider la commande</a>
+      <a href="confirmation.html" class="btn btn-success col-6 offset-3 col-md-4 offset-md-4 my-4 disabled">Valider la commande</a>
     </main>
-  </body>
-  <script src="panier.js"></script>
-  <script src="bootstrap.min.js"></script>
+
+    <!-- Footer -->
+    <footer class="page-footer font-small bg-light pt-4">
+        <div class="container-fluid text-center text-md-left">
+          <div class="row">
+            <div class="col-md-6 mt-md-0 mt-3">
+              <img src="assets/images/logo.png" width="150" height="60"alt="Logo Orinoco"/></a>
+            </div>
+          <hr class="clearfix w-100 d-md-none pb-3">
+          <div class="col-md-3 mb-md-0 mb-3">
+            <h5 class="text-uppercase">Suivez-nous</h5>
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!">Twitter</a>
+              </li>
+              <li>
+                <a href="#!">Instagram</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3 mb-md-0 mb-3">
+            <h5 class="text-uppercase">Contactez-nous</h5>
+            <ul class="list-unstyled">
+              <li>13 rue de la Concorde, 75000 Paris</li></li>
+              <li>05.68.69.69.69</li>
+              <li>contact@orinoco.com</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    <!-- Copyright -->
+      <div class="footer-copyright text-center py-3 blue">© 2020 Copyright:
+        <a href="https://mdbootstrap.com/"> Orinoco.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+<!-- Fin Footer -->
+  </body> 
+  <script src="assets/js/panier.js"></script>
 </html>
+
