modif commentaires + élaboration étape fichier product.js

--- a/panier.html
+++ b/panier.html
@@ -42,11 +42,10 @@
 
     <!--Contenu du panier-->
     <main class="container">
-      <div class="row my-4 headlines"></div>
-      <div class="row products-container border-dark"></div>
+      <div class="row basket_container border-dark"></div>
       <div class="card border-dark form-container">
         <div class="card-header text-center">
-          <h1>Pour valider votre commande</h3>
+          <h1>Pour valider votre commande</h1>
         </div>
         <div class="card-body">
           <form class="form">
