--- a/Front/index.html
+++ b/Front/index.html
@@ -45,7 +45,7 @@
               </li>
               <li class="nav-item panier">
                 <a class="nav-link" href="panier.html">
-                  <i class="fas fa-shopping-basket"></i> Panier<span>0</span>
+                  <i class="fas fa-shopping-basket"></i> Panier
                 </a>
               </li>
             </ul>
