ajout panier prix total OK

--- a/panier.html
+++ b/panier.html
@@ -30,6 +30,7 @@
                 <li class="nav-item panier">
                   <a class="nav-link" href="panier.html">
                     <i class="fas fa-shopping-basket"></i> Panier
+
                   </a>
                 </li>
               </ul>
@@ -47,10 +48,9 @@
             <thead class="thead-dark">
               <tr>
                 <th>Nom de l'article</th>
-                <th>Photo</th>
                 <th>Couleur</th>
                 <th>Description</th>
-                <th>Quantité<th>
+                <th>Quantité</th>
                 <th>Prix</th>
               </tr>
             </thead>
