--- a/product.html
+++ b/product.html
@@ -32,7 +32,6 @@
                 <li class="nav-item panier">
                   <a class="nav-link" href="panier.html">
                     <i class="fas fa-shopping-basket"></i> Panier
-                    <span>0</span>
                   </a>
                 </li>
               </ul>
@@ -55,7 +54,7 @@
         <div id="moreOptions" class="col-md-5 align-self-center mb-5 mb-lg-0 bg-dark text-white d-flex flex-column">
           <h3 id="prix" class="my-3"></h3>
           <p id="description" class="my-lg-3"></p>
-          <label for="colors">Couleur :</label>
+          <label for="select">Couleur :</label>
           <select name="colors" id="color-select" class="my-1"></select>
           <label for="select">Quantité :</label>
           <select name="quantité" id="quantiteProduit" class= "mb-3">
