requête POST et page confirmation OK

--- a/confirmation.html
+++ b/confirmation.html
@@ -18,7 +18,7 @@
         <div class="row">
           <nav class="col navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="index.html">
-              <img src="images/logo.png" width="150" height="60" alt="Logo Orinoco"
+              <img src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"
             /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,6 @@
           <div class="card-body totalPrice">
             <h4>Le montant de votre commande est de <u><span></span>,00</u> €</h4>
           </div>
-          <div class="card-body recap"><h3>Vous avez commandé : </h3><p></p></div>
           <div class="card-footer orderId">
             <h4>Le numéro de votre commande est : </br><span></span></h4>
           </div>
