mise en page et responsive OK

--- a/confirmation.html
+++ b/confirmation.html
@@ -40,19 +40,19 @@
       </div>
     </header>
 
-    <!-- Liste des produits-->
+    <!-- Corps de la confirmation-->
     <main class="container">
       <div class="row confirm-order my-4">
         <div class="card col-10 offset-1 col-md-8 offset-md-2">
-          <div class="card-header">
+          <h1 class="font-weight-bold text-center">Confirmation de votre commande</h1>
+          <div class="card-header bg-info">
             <h2 class="name text-center"></h2>
             <h3 class="font-weight-bold text-center">Nous vous remercions pour votre commande</h3>
           </div>
-
           <div class="card-body totalPrice">
             <h4>Le montant de votre commande est de <u><span></span>,00</u> €</h4>
           </div>
-          <div class="card-footer orderId">
+          <div class="card-footer commandeID bg-success">
             <h4>Le numéro de votre commande est : </br><span></span></h4>
           </div>
         </div>
