--- a/panier.html
+++ b/panier.html
@@ -43,8 +43,8 @@
     <!--Contenu du panier-->
     <main class="container">
         <h1>Votre panier</h1>
-        <section id="tableauPanier">
-          <table class="table">
+        <div id="tableauPanier">
+          <table class="table bg-light">
             <thead class="thead-dark">
               <tr>
                 <th>Nom de l'article</th>
@@ -57,11 +57,11 @@
             <tbody id="afficheProduitPanier">
             </tbody>
           </table>
-          <div id ="affichageTotal"></div>
-        </section>
+          <h4 id ="affichageTotal"></h4> 
+        </div>
         
       <div class="card border-dark form-container">
-        <div class="card-header text-center">
+        <div class="card-header text-center bg-success">
           <h2>Pour valider votre commande</h1>
         </div>
         <div class="card-body">
