modif suite à test W3C HTML

--- a/product.html
+++ b/product.html
@@ -18,7 +18,7 @@
           <nav class="col navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/images/logo.png" width="150"height="60"alt="Logo Orinoco"
+                src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"
             /></a>
             <button
               class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
         <div id="product" class='row border-dark bg-dark text-white mx-auto'>
           <div id="generalPresentation" class="pb-3 card border-white col-md-6 align-self-center m-3 bg-dark text-white">  
             <h2 id="titre" class="text-center align-self-top"></h2> 
-            <img  id= "image" src="" alt="photo ours en peluche" class="card-img">
+            <img id= "image" src="" alt="photo ours en peluche" class="card-img">
             
           </div>
         <div id="moreOptions" class="col-md-5 align-self-center mb-5 mb-lg-0 bg-dark text-white d-flex flex-column">
@@ -76,7 +76,6 @@
           </div>
           </div>
         </div>
-      </div>
     </main>
 
     <!-- Footer -->
@@ -84,7 +83,7 @@
         <div class="container-fluid text-center text-md-left">
           <div class="row">
             <div class="col-md-6 mt-md-0 mt-3">
-              <img src="assets/images/logo.png" width="150" height="60"alt="Logo Orinoco"/></a>
+              <img src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"/>
             </div>
           <hr class="clearfix w-100 d-md-none pb-3">
           <div class="col-md-3 mb-md-0 mb-3">
@@ -101,7 +100,7 @@
           <div class="col-md-3 mb-md-0 mb-3">
             <h5 class="text-uppercase">Contactez-nous</h5>
             <ul class="list-unstyled">
-              <li>13 rue de la Concorde, 75000 Paris</li></li>
+              <li>13 rue de la Concorde, 75000 Paris</li>
               <li>05.68.69.69.69</li>
               <li>contact@orinoco.com</li>
             </ul>
