--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div class="row">
         <nav class="col navbar navbar-expand-lg navbar-light">
           <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo.png" width="150" height="60"alt="Logo Orinoco"/></a>
-          <button class="navbar-toggler"type="button"data-toggle="collapse"data-target="#navbarContent" aria-controls="navbarSupportedContent"aria-expanded="false"aria-label="Toggle navigation">
+            <img src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"/></a>
+          <button class="navbar-toggler" type="button"data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
@@ -66,7 +66,7 @@
       <div class="container-fluid text-center text-md-left">
         <div class="row">
           <div class="col-md-6 mt-md-0 mt-3">
-            <img src="assets/images/logo.png" width="150" height="60"alt="Logo Orinoco"/></a>
+            <img src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"/>
           </div>
         <hr class="clearfix w-100 d-md-none pb-3">
         <div class="col-md-3 mb-md-0 mb-3">
@@ -83,7 +83,7 @@
         <div class="col-md-3 mb-md-0 mb-3">
           <h5 class="text-uppercase">Contactez-nous</h5>
           <ul class="list-unstyled">
-            <li>13 rue de la Concorde, 75000 Paris</li></li>
+            <li>13 rue de la Concorde, 75000 Paris</li>
             <li>05.68.69.69.69</li>
             <li>contact@orinoco.com</li>
           </ul>
@@ -100,7 +100,7 @@
   </body> 
   <script src="assets/js/index.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 </html>
 
