--- a/panier.html
+++ b/panier.html
@@ -18,8 +18,8 @@
           <nav class="col navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/images/logo.png"width="150"height="60" alt="Logo Orinoco"/></a>
-            <button class="navbar-toggler"type="button"data-toggle="collapse"data-target="#navbarContent"aria-controls="navbarSupportedContent"aria-expanded="false"aria-label="Toggle navigation">
+                src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"/></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false"aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
@@ -62,34 +62,34 @@
         
       <div class="card border-dark form-container">
         <div class="card-header text-center bg-success">
-          <h2>Pour valider votre commande</h1>
+          <h2>Pour valider votre commande</h2>
         </div>
         <div class="card-body">
           <form class="form">
             <div class="form-row my-3">
               <label for="firstName" class="col-md-1 col-form-label">Prénom</label>
               <div class="col-md-5">
-                <input type="text"class="form-control"id="firstName"placeholder="Prénom"required/>
+                <input type="text" class="form-control" id="firstName" placeholder="Prénom" required/>
               </div>
               <label for="lastName" class="col-md-1 col-form-label">Nom</label>
               <div class="col-md-5">
-                <input type="text"class="form-control"id="lastName"placeholder="Nom"required/>
+                <input type="text" class="form-control" id="lastName" placeholder="Nom" required/>
               </div>
             </div>
             <div class="form-row my-3">
               <label for="inputEmail" class="col-md-1 col-form-label">Email</label>
               <div class="col-md-5">
-                <input type="email"class="form-control"id="inputEmail"placeholder="xxx@yyy.zzz"required/>
+                <input type="email" class="form-control" id="inputEmail" placeholder="xxx@yyy.zzz" required/>
               </div>
               <label for="telephoneNumber" class="col-md-1 col-form-label">Téléphone</label>
               <div class="col-md-5">
-                <input type="tel" maxlength="10" class="form-control"id="telephoneNumber"placeholder="0000000000"required/>
+                <input type="tel" maxlength="10" class="form-control" id="telephoneNumber" placeholder="0000000000" required/>
               </div>
             </div>
             <div class="form-row my-3">
               <label for="inputAddress" class="col-md-1 col-form-label">Adresse</label>
               <div class="col-md-4">
-                <input type="text"class="form-control"id="inputAddress" placeholder="30 boulevard Napoléon"required/>
+                <input type="text" class="form-control" id="inputAddress" placeholder="30 boulevard Napoléon" required/>
               </div>
               <label for="inputCity" class="col-md-1 col-form-label">Ville</label>
               <div class="col-md-2">
@@ -97,7 +97,7 @@
               </div>
               <label for="inputZip" class="col-md-2 col-form-label">Code Postal</label>
               <div class="col-md-2">
-                <input type="text"class="form-control"id="inputZip"placeholder="75000"required/>
+                <input type="text" class="form-control" id="inputZip" placeholder="75000" required/>
               </div>
             </div>
             <div class="text-center">
@@ -116,7 +116,7 @@
         <div class="container-fluid text-center text-md-left">
           <div class="row">
             <div class="col-md-6 mt-md-0 mt-3">
-              <img src="assets/images/logo.png" width="150" height="60"alt="Logo Orinoco"/></a>
+              <img src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"/>
             </div>
           <hr class="clearfix w-100 d-md-none pb-3">
           <div class="col-md-3 mb-md-0 mb-3">
@@ -133,7 +133,7 @@
           <div class="col-md-3 mb-md-0 mb-3">
             <h5 class="text-uppercase">Contactez-nous</h5>
             <ul class="list-unstyled">
-              <li>13 rue de la Concorde, 75000 Paris</li></li>
+              <li>13 rue de la Concorde, 75000 Paris</li>
               <li>05.68.69.69.69</li>
               <li>contact@orinoco.com</li>
             </ul>
@@ -150,7 +150,7 @@
   </body> 
   <script src="assets/js/panier.js"></script>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 </html>
 
