ajout condition adresse mail non valide et finalisation

--- a/panier.html
+++ b/panier.html
@@ -19,7 +19,7 @@
             <a class="navbar-brand" href="index.html">
               <img
                 src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"/></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false"aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
@@ -93,7 +93,7 @@
               </div>
               <label for="inputCity" class="col-md-1 col-form-label">Ville</label>
               <div class="col-md-2">
-                <input type="text"class="form-control"id="inputCity"placeholder="Paris"required/>
+                <input type="text" class="form-control" id="inputCity" placeholder="Paris" required/>
               </div>
               <label for="inputZip" class="col-md-2 col-form-label">Code Postal</label>
               <div class="col-md-2">
@@ -147,10 +147,10 @@
       <!-- Copyright -->
     </footer>
 <!-- Fin Footer -->
-  </body> 
   <script src="assets/js/panier.js"></script>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+  </body> 
 </html>
 
