--- a/product.html
+++ b/product.html
@@ -21,7 +21,7 @@
                 src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"
             /></a>
             <button
-              class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
@@ -49,7 +49,6 @@
           <div id="generalPresentation" class="pb-3 card border-white col-md-6 align-self-center m-3 bg-dark text-white">  
             <h2 id="titre" class="text-center align-self-top"></h2> 
             <img id= "image" src="" alt="photo ours en peluche" class="card-img">
-            
           </div>
         <div id="moreOptions" class="col-md-5 align-self-center mb-5 mb-lg-0 bg-dark text-white d-flex flex-column">
           <h3 id="prix" class="my-3"></h3>
@@ -114,9 +113,9 @@
       <!-- Copyright -->
     </footer>
   <!-- Fin Footer -->
-  </body> 
   <script src="assets/js/product.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+  </body> 
 </html>
