--- a/confirmation.html
+++ b/confirmation.html
@@ -20,7 +20,7 @@
             <a class="navbar-brand" href="index.html">
               <img src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"
             /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
@@ -53,7 +53,7 @@
             <h4>Le montant de votre commande est de <u><span></span>,00</u> €</h4>
           </div>
           <div class="card-footer commandeID bg-success">
-            <h4>Le numéro de votre commande est : </br><span></span></h4>
+            <h4>Le numéro de votre commande est : <br><span></span></h4>
           </div>
         </div>
       </div>
@@ -64,7 +64,7 @@
         <div class="container-fluid text-center text-md-left">
           <div class="row">
             <div class="col-md-6 mt-md-0 mt-3">
-              <img src="assets/images/logo.png" width="150" height="60"alt="Logo Orinoco"/>
+              <img src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"/>
             </div>
           <hr class="clearfix w-100 d-md-none pb-3">
           <div class="col-md-3 mb-md-0 mb-3">
@@ -95,9 +95,9 @@
       <!-- Copyright -->
     </footer>
 <!-- Fin Footer -->
-  </body> 
-  <script src="assets/js/confirmation.js"></script>
+<script src="assets/js/confirmation.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+  </body> 
 </html>
