--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav class="col navbar navbar-expand-lg navbar-light">
           <a class="navbar-brand" href="index.html">
             <img src="assets/images/logo.png" width="150" height="60" alt="Logo Orinoco"/></a>
-          <button class="navbar-toggler" type="button"data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
@@ -97,10 +97,10 @@
     <!-- Copyright -->
   </footer>
 <!-- Fin Footer -->
-  </body> 
   <script src="assets/js/index.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+  </body> 
 </html>
 
