--- a/panier.html
+++ b/panier.html
@@ -69,46 +69,46 @@
             <div class="form-row my-3">
               <label for="firstName" class="col-md-1 col-form-label">Prénom</label>
               <div class="col-md-5">
-                <input type="text" class="form-control" id="firstName" placeholder="Prénom" required/>
+                <input type="text" class="form-control" id="firstName" placeholder="Prénom"/>
               </div>
               <label for="lastName" class="col-md-1 col-form-label">Nom</label>
               <div class="col-md-5">
-                <input type="text" class="form-control" id="lastName" placeholder="Nom" required/>
+                <input type="text" class="form-control" id="lastName" placeholder="Nom"/>
               </div>
             </div>
             <div class="form-row my-3">
               <label for="inputEmail" class="col-md-1 col-form-label">Email</label>
               <div class="col-md-5">
-                <input type="email" class="form-control" id="inputEmail" placeholder="xxx@yyy.zzz" required/>
+                <input type="email" class="form-control" id="inputEmail" placeholder="xxx@yyy.zzz"/>
               </div>
               <label for="telephoneNumber" class="col-md-1 col-form-label">Téléphone</label>
               <div class="col-md-5">
-                <input type="tel" maxlength="10" class="form-control" id="telephoneNumber" placeholder="0000000000" required/>
+                <input type="tel" maxlength="10" class="form-control" id="telephoneNumber" placeholder="0000000000"/>
               </div>
             </div>
             <div class="form-row my-3">
               <label for="inputAddress" class="col-md-1 col-form-label">Adresse</label>
               <div class="col-md-4">
-                <input type="text" class="form-control" id="inputAddress" placeholder="30 boulevard Napoléon" required/>
+                <input type="text" class="form-control" id="inputAddress" placeholder="30 boulevard Napoléon"/>
               </div>
               <label for="inputCity" class="col-md-1 col-form-label">Ville</label>
               <div class="col-md-2">
-                <input type="text" class="form-control" id="inputCity" placeholder="Paris" required/>
+                <input type="text" class="form-control" id="inputCity" placeholder="Paris"/>
               </div>
               <label for="inputZip" class="col-md-2 col-form-label">Code Postal</label>
               <div class="col-md-2">
-                <input type="text" class="form-control" id="inputZip" placeholder="75000" required/>
+                <input type="text" class="form-control" id="inputZip" placeholder="75000"/>
               </div>
             </div>
             <div class="text-center">
-              <button class="btn btn-info order-submit">
+              <button class="btn btn-info order-submit disabled">
                 Confirmer mes informations
               </button>
             </div>
           </form>
         </div>
       </div>
-      <a href="confirmation.html" class="btn btn-success col-6 offset-3 col-md-4 offset-md-4 my-4 disabled">Valider la commande</a>
+      <a href="confirmation.html" class="btn btn-success validation col-6 offset-3 col-md-4 offset-md-4 my-4 disabled">Valider la commande</a>
     </main>
 
     <!-- Footer -->
