--- a/product.html
+++ b/product.html
@@ -69,11 +69,11 @@
             <button id="btn-ajouter" class="btn btn-success m-3">Ajouter au panier</button>
               <div id="overlay" class="overlay">
                 <div id="popup" class="popup">
-                  <h2>Votre article a bien été ajouté au panier<span id="btnClose" class="btnClose">&times;</span></h2>
+                  <h2>Votre article a bien été ajouté au panier.<span id="btnClose" class="btnClose">&times;</span></h2>
               </div>
             </div>
           </div>
-          </div>
+        </div>
         </div>
     </main>
 
